--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   </div>
 
   <script>
-    const scriptURL = "https://script.google.com/macros/s/AKfycbzgG0-tFP_ZelXrAS1RCfHw4EfiWgnHg7Lo7VR4DUHOfaQS_pXEE91xwAo-8Dghmo1k/exec"; // replace with your Apps Script Web App URL
+    const scriptURL = "https://script.google.com/macros/s/AKfycbzaYl85jGoJOabG5QVzoqTxqVNoTo_N7BRtDqnjSsVZgmUR1uuTUr4_M2XGHaWwbY6b/exec"; // replace with your Apps Script Web App URL
 
     let regionData = {};
     (async function loadRegions(){
@@ -142,32 +142,64 @@
     });
 
     // 🧩 Updated: fixed attachment handling for Apps Script
-    document.getElementById('ticketForm').addEventListener('submit', async function(ev) {
-      ev.preventDefault();
-      const form = ev.target;
-      const toast = document.getElementById('toast');
-      toast.classList.add('hidden');
-      toast.textContent = '';
+   document.getElementById("ticketForm").addEventListener("submit", async (e) => {
+  e.preventDefault();
+     
+  const fileInput = document.getElementById("attachments");
+  const files = fileInput.files;
+  const attachments = [];
 
-      const formData = new FormData(form);
-
-      const res = await fetch(scriptURL, { method: 'POST', body: formData });
-      let result;
-      try { result = await res.json(); } catch (e) { result = null; }
-
-      if (res.ok && result && result.success) {
-        toast.textContent = `✅ Ticket submitted — ID: ${result.ticketId}`;
-        toast.className = 'mt-4 text-center text-white py-2 rounded-md bg-green-600';
-        toast.classList.remove('hidden');
-        form.reset();
-      } else {
-        const msg = (result && result.error) ? result.error : 'Server error or invalid response';
-        toast.textContent = `❌ ${msg}`;
-        toast.className = 'mt-4 text-center text-white py-2 rounded-md bg-red-600';
-        toast.classList.remove('hidden');
-        console.error('Error submitting:', result);
-      }
+  // Convert files to base64
+  for (let i = 0; i < files.length; i++) {
+    const file = files[i];
+    const base64 = await toBase64(file);
+    attachments.push({
+      name: file.name,
+      mimeType: file.type,
+      content: base64.split(",")[1]
     });
+  }
+
+  const data = {
+    name: document.getElementById("name").value,
+    email: document.getElementById("email").value,
+    supportLevel: document.getElementById("supportLevel").value,
+    category: document.getElementById("category").value,
+    region: document.getElementById("region").value,
+    province: document.getElementById("province").value,
+    municipality: document.getElementById("municipality").value,
+    message: document.getElementById("message").value,
+    attachments: attachments
+  };
+
+  try {
+    const res = await fetch(scriptURL, {
+      method: "POST",
+      body: JSON.stringify(data),
+      headers: { "Content-Type": "application/json" },
+    });
+
+    const result = await res.json();
+
+    if (result.result === "success") {
+      alert(`✅ Ticket submitted successfully!\nTicket ID: ${result.ticketId}`);
+      document.getElementById("ticketForm").reset();
+    } else {
+      alert("❌ " + result.message);
+    }
+  } catch (error) {
+    alert("❌ Error submitting ticket. " + error.message);
+  }
+});
+
+function toBase64(file) {
+  return new Promise((resolve, reject) => {
+    const reader = new FileReader();
+    reader.readAsDataURL(file);
+    reader.onload = () => resolve(reader.result);
+    reader.onerror = reject;
+  });
+}
   </script>
 </body>
 </html>
