--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 
     <h1 class="text-2xl font-bold text-center text-blue-700 mb-6">PMNP-IS Help Center</h1>
 
+    <!-- NOTE: enctype added -->
     <form id="ticketForm" class="grid grid-cols-1 md:grid-cols-2 gap-4" enctype="multipart/form-data">
+      <!-- (all inputs unchanged) -->
       <div class="col-span-2">
         <label class="block text-sm font-semibold">Full Name</label>
         <input type="text" name="name" required class="w-full border rounded-md p-2" />
@@ -89,7 +91,10 @@
   </div>
 
   <script>
-    
+    // ← Replace with your published Apps Script web app URL (deployed as "Anyone")
+    const scriptURL = "https://script.google.com/macros/s/AKfycbxsR3CFUHigsWCepFyVEDNsCgvXuvzIy0TIWQmx-mZq3nUa2sjz4oHrzWzhpyk-yoTK/exec";
+
+    // regionData.json loader (unchanged)
     let regionData = {};
     (async function loadRegions(){
       try {
@@ -140,67 +145,58 @@
       }
     });
 
-    // 🧩 Updated: fixed attachment handling for Apps Script
-   document.getElementById("ticketForm").addEventListener("submit", async (e) => {
-  e.preventDefault();
+    // ----- IMPORTANT: replace fetch() with XHR and append individual file keys -----
+    document.getElementById('ticketForm').addEventListener('submit', function(ev) {
+      ev.preventDefault();
+      const form = ev.target;
+      const toast = document.getElementById('toast');
+      toast.classList.add('hidden');
+      toast.textContent = '';
 
-const scriptURL = "https://script.google.com/macros/s/AKfycbzaYl85jGoJOabG5QVzoqTxqVNoTo_N7BRtDqnjSsVZgmUR1uuTUr4_M2XGHaWwbY6b/exec"; 
-     
-  const fileInput = document.getElementById("attachments");
-  const files = fileInput.files;
-  const attachments = [];
+      const formData = new FormData();
 
-  // Convert files to base64
-  for (let i = 0; i < files.length; i++) {
-    const file = files[i];
-    const base64 = await toBase64(file);
-    attachments.push({
-      name: file.name,
-      mimeType: file.type,
-      content: base64.split(",")[1]
+      // append text fields (use same names the backend expects)
+      const fields = ['name','email','cc','supportLevel','region','province','municipality','category','message'];
+      fields.forEach(k => {
+        const el = form.querySelector(`[name="${k}"]`);
+        if (el) formData.append(k, el.value || '');
+      });
+
+      // append files individually as file0,file1,... so Apps Script will receive them reliably
+      const filesInput = document.getElementById('filesInput');
+      if (filesInput && filesInput.files && filesInput.files.length) {
+        Array.from(filesInput.files).forEach((f, i) => {
+          formData.append(`file${i+1}`, f, f.name);
+        });
+      }
+
+      // XHR request (more reliable cross-browser for multipart -> Apps Script)
+      const xhr = new XMLHttpRequest();
+      xhr.open('POST', scriptURL, true);
+      xhr.onload = function() {
+        let result = null;
+        try { result = JSON.parse(xhr.responseText); } catch (e) { result = null; }
+        if (xhr.status >= 200 && xhr.status < 300 && result && result.success) {
+          toast.textContent = `✅ Ticket submitted — ID: ${result.ticketId}`;
+          toast.className = 'mt-4 text-center text-white py-2 rounded-md bg-green-600';
+          toast.classList.remove('hidden');
+          form.reset();
+        } else {
+          const msg = (result && result.error) ? result.error : 'Server error or invalid response';
+          toast.textContent = `❌ ${msg}`;
+          toast.className = 'mt-4 text-center text-white py-2 rounded-md bg-red-600';
+          toast.classList.remove('hidden');
+          console.error('XHR result', xhr.status, xhr.responseText);
+        }
+      };
+      xhr.onerror = function(err) {
+        toast.textContent = '❌ Network error — check console';
+        toast.className = 'mt-4 text-center text-white py-2 rounded-md bg-red-600';
+        toast.classList.remove('hidden');
+        console.error('XHR error', err);
+      };
+      xhr.send(formData);
     });
-  }
-
-  const data = {
-    name: document.getElementById("name").value,
-    email: document.getElementById("email").value,
-    supportLevel: document.getElementById("supportLevel").value,
-    category: document.getElementById("category").value,
-    region: document.getElementById("region").value,
-    province: document.getElementById("province").value,
-    municipality: document.getElementById("municipality").value,
-    message: document.getElementById("message").value,
-    attachments: attachments
-  };
-
-  try {
-    const res = await fetch(scriptURL, {
-      method: "POST",
-      body: JSON.stringify(data),
-      headers: { "Content-Type": "application/json" },
-    });
-
-    const result = await res.json();
-
-    if (result.result === "success") {
-      alert(`✅ Ticket submitted successfully!\nTicket ID: ${result.ticketId}`);
-      document.getElementById("ticketForm").reset();
-    } else {
-      alert("❌ " + result.message);
-    }
-  } catch (error) {
-    alert("❌ Error submitting ticket. " + error.message);
-  }
-});
-
-function toBase64(file) {
-  return new Promise((resolve, reject) => {
-    const reader = new FileReader();
-    reader.readAsDataURL(file);
-    reader.onload = () => resolve(reader.result);
-    reader.onerror = reject;
-  });
-}
   </script>
 </body>
 </html>
